add favorite list

--- a/practice.html
+++ b/practice.html
@@ -36,6 +36,20 @@
     <div>
         <img src="children-817365_640.jpg" alt="">
     </div>
+    <div class="favorite">
+        <h2>my favorite game </h2>
+        <ol>
+            <li>cricket</li>
+            <li>football</li>
+            <li>tenis</li>
+        </ol>
+        <h2>my favorite food</h2>
+        <ul>
+            <li>burger</li>
+            <li>pizza</li>
+            <li>pasta</li>
+        </ul>
+    </div>
     
 </body>
 </html>
